--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NODE_ENV = 'development'
-MONGODB_URL_DEVELOPMENT = 'mongodb://localhost/Aasara'
+MONGODB_URL_DEVELOPMENT = 'mongodb+srv://shivamtewari2002:nitkwifiworst@cluster0.3wzmcws.mongodb.net/?retryWrites=true&w=majority'
 
 
 # NODE_ENV = 'production'
@@ -7,4 +7,4 @@ SENDOR_EMAIL =
 SENDOR_PASSWORD = 
 MONGODB_URL_PRODUCTION = 
 
-MONGODB_URL_TEST = 'mongodb://localhost/Aasara'
+MONGODB_URL_TEST = 'mongodb+srv://shivamtewari2002:nitkwifiworst@cluster0.3wzmcws.mongodb.net/?retryWrites=true&w=majority'
